--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@ new coordinates and dimensions.
     <script src="pushdown.js"></script>
     <title></title>
     <style>
+        div {
+            margin: 0;
+            padding: 0;
+        }
         .comp{
             position: absolute;
             border: solid 1px black;
@@ -37,12 +41,18 @@ new coordinates and dimensions.
         .compFl{
              border: solid 1px black;
              text-align: center;
+            float: left;
+            position: relative;
          }
         .row{
-
+            position: relative;
+            margin-left: auto;
+            margin-right: auto;
+            clear: both;
         }
         .col{
             float: left;
+            position: relative;
         }
         .cl {
             clear: left;
@@ -51,8 +61,19 @@ new coordinates and dimensions.
     </style>
 </head>
 <body>
-<div id="workspace"></div>
-<div id="html"></div>
+<p>
+    On the left - absolute positioned elements, Right - HTML produced page. These elements are from data.js and processed
+    through getRowsAndCols in order to get grid data structure necessary for HTML rendering. Also a valuable feature
+    can be observed by calling doPushdown(60&laquo;or any number in px to grow&raquo;) from dev console.
+    Black components are growing
+    and pushing below components according to the html rendering data structure. It happens in left side - absolute positioned.
+    In doPushdown there is no any dependency on DOM.
+</p>
+<p>For your convenience the window can be zoomed out</p>
+<div style="position: relative">
+<div id="workspace" style="float: left; position: relative;"></div>
+<div id="html" style="margin-left: 1200px;position: relative; width: 1200px"></div>
+</div>
 <script src="flat.js"></script>
 </body>
 </html>
